--- a/CodeChat_Server/CodeChat_Server/CodeChat_Client/templates/CodeChat_client.html
+++ b/CodeChat_Server/CodeChat_Server/CodeChat_Client/templates/CodeChat_client.html
@@ -13,20 +13,20 @@
         <link
             rel="stylesheet"
             type="text/css"
-            href="/static/splitter.css?v=1"
+            href="/static/splitter.css?v=5"
         />
         <!-- Use the ``ReconnectingWebsocket`` to automatically reconnect a websocket when the network connection drops -- for example, a laptop goes to sleep then wakes back up. -->
         <script src="/static/ReconnectingWebsocket.js?v=1"></script>
         <!-- The `../static/CodeChat_client.js`. -->
-        <script src="/static/CodeChat_client.js?v=3"></script>
+        <script src="/static/CodeChat_client.js?v=2"></script>
         <!-- Styling in `../static/CodeChat_client.css`. -->
         <link
             rel="stylesheet"
             type="text/css"
-            href="/static/CodeChat_client.css?v=1"
+            href="/static/CodeChat_client.css?v=3"
         />
     </head>
-    <body>
+    <body class = light_theme>
         <div class="horizontally_divided" id="splitter">
             <div>
                 <!-- The children of the splitter div must be divs, which the splitter JS will assign styles to. So, wrap the iframe in a div. -->
