Added Dark_Theme.css file, added splitter to Dark_Theme.css, edited CodeChat_Client.html

--- a/CodeChat_Server/CodeChat_Server/CodeChat_Client/templates/CodeChat_client.html
+++ b/CodeChat_Server/CodeChat_Server/CodeChat_Client/templates/CodeChat_client.html
@@ -23,7 +23,7 @@
         <link
             rel="stylesheet"
             type="text/css"
-            href="/static/CodeChat_client.css?v=1"
+            href="/static/Themes/Dark_Theme.css?v=1"
         />
     </head>
     <body onclick = "window_onclick()">
