--- a/CodeChat_Server/CodeChat_Server/CodeChat_Client/static/Themes/Dark_Theme.css
+++ b/CodeChat_Server/CodeChat_Server/CodeChat_Client/static/Themes/Dark_Theme.css
@@ -36,7 +36,7 @@ body {
     padding: var(--body-padding);
     margin: 0px;
     /* The default of transparent makes VS Code's black show up and confuse everything. For now, make it white. */
-    background: white;
+    background: rgb(68, 68, 68);
 }
 
 /* This div contains the splitter plus both split divs. */
@@ -79,6 +79,12 @@ body {
     color: red;
 }
 
+#warnings{
+
+    color: rgb(192, 192, 192);
+}
+
+
 /* The status bar at the bottom of the screen. */
 #status_div {
     height: var(--status-height);
@@ -102,7 +108,7 @@ body {
 }
 
 .have_warnings {
-    background-color: sandybrown;
+    background-color: gray;
 }
 
 /* `Class to use <class building>` for the output iframe when a build is in progress. */
@@ -110,8 +116,17 @@ body {
     opacity: 0.5;
 }
 
-/* Class to change the color or error links in CodeChat render */
+/* Class to change the color of error links in CodeChat render */
 .error_link{
 
-
+    color: white;
 }
+
+.divider_horizontal {
+    background: #888;
+  }
+
+  .divider_horizontal.dragged {
+    background: #f00;
+  }
+
