--- a/CodeChat_Server/CodeChat_Server/CodeChat_Client/static/Themes/Ocean_Blue.css
+++ b/CodeChat_Server/CodeChat_Server/CodeChat_Client/static/Themes/Ocean_Blue.css
@@ -11,7 +11,7 @@
 
 ***********************************************
 |docname| - Style sheet for the CodeChat Client
-**********************************************
+***********************************************
 */
 
 /* This is used only to store a reused variable value. See https://drafts.csswg.org/css-variables/. */
@@ -36,7 +36,7 @@ body {
     padding: var(--body-padding);
     margin: 0px;
     /* The default of transparent makes VS Code's black show up and confuse everything. For now, make it white. */
-    background: rgb(30, 30, 30);
+    background: #0065C4;
 }
 
 /* This div contains the splitter plus both split divs. */
@@ -60,7 +60,6 @@ body {
 
 /* A div containing the build messages and errors. */
 #build_contents {
-    color:rgb(255, 255, 255);
     overflow: auto;
     /* Not setting the width and height prevents the scroll bars from appearing. */
     height: 100%;
@@ -77,8 +76,14 @@ body {
 }
 
 #errors {
-    color: rgb(241, 76, 76);
+    color: #b67b5c;
 }
+
+#warnings{
+
+    color: #6B5A0B;
+}
+
 
 /* The status bar at the bottom of the screen. */
 #status_div {
@@ -99,11 +104,11 @@ body {
 
 /* Classes for the errors/warning text in the status bar. */
 .have_errors {
-    background-color: red;
+    background-color: #B84509;
 }
 
 .have_warnings {
-    background-color: rgba(121, 2, 2, 0.562);
+    background-color: #6B5A0B;
 }
 
 /* `Class to use <class building>` for the output iframe when a build is in progress. */
@@ -111,8 +116,17 @@ body {
     opacity: 0.5;
 }
 
-/* Class to change the color or error links in CodeChat render */
+/* Class to change the color of error links in CodeChat render */
 .error_link{
 
+    color: rgb(177, 148, 255);
+}
 
+.divider_vertical,
+.divider_horizontal {
+  background: darkblue;
+}
+.divider_vertical.dragged,
+.divider_horizontal.dragged {
+  background: darkblue;
 }
