Added theme_picker.txt, method needs adjusting, but theme now read from a file as opposed to hardcoded

--- a/CodeChat_Server/CodeChat_Server/CodeChat_Client/static/Themes/Dark_Theme.css
+++ b/CodeChat_Server/CodeChat_Server/CodeChat_Client/static/Themes/Dark_Theme.css
@@ -122,6 +122,7 @@ body {
     color: white;
 }
 
+/* Sets the color of the border and build menu splitter */
 .divider_vertical,
 .divider_horizontal {
   background: black;
