update rendering placeholder

--- a/CodeChat_Server/CodeChat_Server/CodeChat_Client/templates/CodeChat_client.html
+++ b/CodeChat_Server/CodeChat_Server/CodeChat_Client/templates/CodeChat_client.html
@@ -36,10 +36,16 @@
                 <iframe
                     id="output"
                     srcdoc="
-                <html>
-                    <h1>CodeChat</h1>
-                    <p>Waiting for initial render. Switch the active source code window to begin.</p>
-                </html>"
+                    <html>
+                      <body style='background-color:#f0f0ff'>
+                        <div style='display:flex;justify-content:center;align-items:center;height:95vh;'>
+                          <div style='text-align:center;font-family:Trebuchet MS;'>
+                            <h1>CodeChat 👩‍💻🗨️</h1>
+                            <p>Waiting for initial render. Switch the active source code window to begin.</p>
+                          </div>
+                        </div>
+                      </body>
+                    </html>"
                 >
                 </iframe>
             </div>
